name:                pure-scroll-loader
version:             0.8.0.0
homepage:            purehs.org/doc/pure-scroll-loader
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-scroll-loader.git

library
  build-depends:
    base,
    pure,
    pure-visibility

  hs-source-dirs: src

  exposed-modules:
    Pure.ScrollLoader

  default-language: Haskell2010
